Fix style details in dark mode

--- a/src/components/currentBudget/CurrentBudget.module.css
+++ b/src/components/currentBudget/CurrentBudget.module.css
@@ -33,7 +33,7 @@
 
 
 .expensesDetails {
-  gap: 0.3rem 1.2rem;
+  gap: 0.5rem 1.2rem;
   padding: 10px 0;
 }
 
