--- a/src/components/input/InputCell.module.css
+++ b/src/components/input/InputCell.module.css
@@ -14,6 +14,7 @@
 
 .inputCell:focus {
   border: 1px solid var(--highlight-color);
+  box-shadow: 0px 0px 3px 1px var(--disabled-input-background-color);
 }
 .inputCell:disabled {
   box-shadow: 0px 1px 1px 1px var(--highlight-color);
