--- a/src/components/section/SectionTitle.module.css
+++ b/src/components/section/SectionTitle.module.css
@@ -20,6 +20,7 @@
 
 .buttonsContainer {
   display: flex;
+  gap: 2px;
   margin-left: auto;
 }
 
